--- a/_config.yml
+++ b/_config.yml
@@ -68,6 +68,9 @@ bing_site_verification   :
 yandex_site_verification :
 naver_site_verification  :
 
+head_scripts:
+  - https://identity.netlify.com/v1/netlify-identity-widget.js
+
 # Social Sharing
 twitter:
   username               :
