--- a/_data/member-profiles.yml
+++ b/_data/member-profiles.yml
@@ -18,6 +18,11 @@ current:
     job: Operations Manager, Calgary Marriott Downtown Hotel
     bio: I am a Haskayne MBA Alumnus with work experience in partnerships, sales/direct marketing, sales management, staffing/recruitment, public relations and marketing strategy execution. I believe in getting the job done and I never shy away from hard work, but I believe even the most difficult tasks can be accomplished in a fun way. I believe in innovative thinking, open-mindedness and the power of a team, while keeping the big picture in mind. “Doing the right thing” and following your heart is the single most important thing I believe I can do as a leader. I live by my beliefs.
     image:
+    
+  - name: Edmee Moojen
+    job: Project Analyst at CETAC- WEST
+    bio: I have lived and worked in several different countries – the Netherlands, Italy, Kenya and Canada. And I have learned that building strong relationships is key for any organization’s or team's sustainable success. I currently work for CETAC where we focus on peer-to-peer learning for entrepreneurs. I believe in the power of connecting people and finding sustainable solutions to society's challenges together. That's why I am excited to be a part of the Haskayne MBA Alumni Alliance. Let's connect! 
+    image: EdmeeMoojenProfile.jpg
 
   - name: Stephen Wan
     job: Director of Operations, Calgary Foothills Primary Care Network
