--- a/_data/member-profiles.yml
+++ b/_data/member-profiles.yml
@@ -17,7 +17,7 @@ current:
   - name: Kai Hochhausen
     job: Operations Manager, Calgary Marriott Downtown Hotel
     bio: I am a Haskayne MBA Alumnus with work experience in partnerships, sales/direct marketing, sales management, staffing/recruitment, public relations and marketing strategy execution. I believe in getting the job done and I never shy away from hard work, but I believe even the most difficult tasks can be accomplished in a fun way. I believe in innovative thinking, open-mindedness and the power of a team, while keeping the big picture in mind. “Doing the right thing” and following your heart is the single most important thing I believe I can do as a leader. I live by my beliefs.
-    image:
+    image: kai.jpeg
     
   - name: Edmee Moojen
     job: Project Analyst at CETAC- WEST
