Update member profiles and images

--- a/_data/member-profiles.yml
+++ b/_data/member-profiles.yml
@@ -14,24 +14,32 @@ current:
 
       Since 2018, I have worked as Associate Dean in the School of Information and Communications Technologies at SAIT Polytechnic. In that time, I launched three new educational programs, doubled enrolment, and am spearheading new work-integrated learning opportunities. My goal is for every student to graduate with both a quality education and relevant work experience.
     image: John-Pitchko-DEC2017.jpg
+
   - name: Kai Hochhausen
     job: Operations Manager, Calgary Marriott Downtown Hotel
     bio: I am a Haskayne MBA Alumnus with work experience in partnerships, sales/direct marketing, sales management, staffing/recruitment, public relations and marketing strategy execution. I believe in getting the job done and I never shy away from hard work, but I believe even the most difficult tasks can be accomplished in a fun way. I believe in innovative thinking, open-mindedness and the power of a team, while keeping the big picture in mind. “Doing the right thing” and following your heart is the single most important thing I believe I can do as a leader. I live by my beliefs.
     image: kai.jpeg
-    
+
   - name: Edmee Moojen
     job: Project Analyst at CETAC- WEST
-    bio: I have lived and worked in several different countries – the Netherlands, Italy, Kenya and Canada. And I have learned that building strong relationships is key for any organization’s or team's sustainable success. I currently work for CETAC where we focus on peer-to-peer learning for entrepreneurs. I believe in the power of connecting people and finding sustainable solutions to society's challenges together. That's why I am excited to be a part of the Haskayne MBA Alumni Alliance. Let's connect! 
+    bio: I have lived and worked in several different countries – the Netherlands, Italy, Kenya and Canada. And I have learned that building strong relationships is key for any organization’s or team's sustainable success. I currently work for CETAC where we focus on peer-to-peer learning for entrepreneurs. I believe in the power of connecting people and finding sustainable solutions to society's challenges together. That's why I am excited to be a part of the Haskayne MBA Alumni Alliance. Let's connect!
     image: EdmeeMoojenProfile.jpg
+
+  - name: Krista Goranson
+    job: Risk Management, ATB Financial
+    bio: Continual learning and giving back to my community are key values for me. This is why I'm so excited to be part of the Haskayne MBA Alumni Alliance board and network. As part of my Haskayne MBA experience, I was fortunate enough to travel and study in Chile, Israel as well as spending almost a year living, working and studying in Rotterdam, Netherlands and Europe. I've had an exciting professional career as well focusing on agriculture, finance, marketing, risk management and post secondary instruction. I look forward to connecting with you!
+    image: KristaImage.jpg
 
   - name: Stephen Wan
     job: Director of Operations, Calgary Foothills Primary Care Network
     bio:
     image: Stephen-Wan-JAN2018.jpg
+
   - name: Nauman Saeed Anwar
     job: Advisory and Program Delivery Manager, Alberta Energy Regulator
     bio: Nauman is currently working as a manager for program delivery and policy advisory with the oil & gas regulator’s climate policy assurance program. Prior to this, Nauman has worked with the likes of SNC Lavalin and Deloitte in Calgary. Passionate about alumni engagement, he has consistently supported the University and Haskayne Business School’s efforts to build a stronger alumni community, most recently playing his role as a UCalgary Alumni Board member. He was also elected the inaugural graduate class ambassador the Class of 2011. His volunteer efforts include mentoring students through the HSB/CCAL Mentorship Program, and supporting various non-for-profit organizations around Calgary.
     image: Nauman-Anwar-jan2018.jpg
+
   - name: Abhinav Krishnan Khanna
     job: Financial Aid Manager, University of Calgary
     bio: I was born and raised in New Delhi, India and graduated with a Bachelors degree in Compute Engineering. Prior to joining the MBA program, I was working in the technical consulting industry for three plus years with major multi nationals. I graduated from the MBA program in 2016 with a specialization in Finance. I joined the Haskayne Alumni Association to strengthen the alumni network and build the Haskayne MBA brand nationally and internationally. Outside of work, I am passionate about traveling, sports and console gaming.
